// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadFiles success should build the schema even with files with separate queries 1`] = `
{
  "definitions": [
    {
      "description": undefined,
      "directives": [],
      "fields": [
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 30,
            "start": 16,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 21,
              "start": 16,
            },
            "value": "hello",
          },
          "type": {
            "kind": "NonNullType",
            "loc": {
              "end": 30,
              "start": 23,
            },
            "type": {
              "kind": "NamedType",
              "loc": {
                "end": 29,
                "start": 23,
              },
              "name": {
                "kind": "Name",
                "loc": {
                  "end": 29,
                  "start": 23,
                },
                "value": "String",
              },
            },
          },
        },
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 27,
            "start": 16,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 18,
              "start": 16,
            },
            "value": "hi",
          },
          "type": {
            "kind": "NonNullType",
            "loc": {
              "end": 27,
              "start": 20,
            },
            "type": {
              "kind": "NamedType",
              "loc": {
                "end": 26,
                "start": 20,
              },
              "name": {
                "kind": "Name",
                "loc": {
                  "end": 26,
                  "start": 20,
                },
                "value": "String",
              },
            },
          },
        },
      ],
      "interfaces": [],
      "kind": "ObjectTypeDefinition",
      "loc": {
        "end": 30,
        "start": 0,
      },
      "name": {
        "kind": "Name",
        "loc": {
          "end": 10,
          "start": 5,
        },
        "value": "Query",
      },
    },
    {
      "description": undefined,
      "directives": [],
      "fields": [
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 56,
            "start": 49,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 51,
              "start": 49,
            },
            "value": "id",
          },
          "type": {
            "kind": "NamedType",
            "loc": {
              "end": 56,
              "start": 53,
            },
            "name": {
              "kind": "Name",
              "loc": {
                "end": 56,
                "start": 53,
              },
              "value": "Int",
            },
          },
        },
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 73,
            "start": 60,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 64,
              "start": 60,
            },
            "value": "name",
          },
          "type": {
            "kind": "NonNullType",
            "loc": {
              "end": 73,
              "start": 66,
            },
            "type": {
              "kind": "NamedType",
              "loc": {
                "end": 72,
                "start": 66,
              },
              "name": {
                "kind": "Name",
                "loc": {
                  "end": 72,
                  "start": 66,
                },
                "value": "String",
              },
            },
          },
        },
      ],
      "interfaces": [],
      "kind": "ObjectTypeDefinition",
      "loc": {
        "end": 76,
        "start": 34,
      },
      "name": {
        "kind": "Name",
        "loc": {
          "end": 43,
          "start": 39,
        },
        "value": "User",
      },
    },
    {
      "kind": "SchemaDefinition",
      "operationTypes": [
        {
          "kind": "OperationTypeDefinition",
          "operation": "query",
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "loc": {
                "end": 10,
                "start": 5,
              },
              "value": "Query",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
}
`;

exports[`loadFiles success should valid schema with many file 1`] = `
{
  "definitions": [
    {
      "description": undefined,
      "directives": [],
      "fields": [
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 30,
            "start": 16,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 21,
              "start": 16,
            },
            "value": "hello",
          },
          "type": {
            "kind": "NonNullType",
            "loc": {
              "end": 30,
              "start": 23,
            },
            "type": {
              "kind": "NamedType",
              "loc": {
                "end": 29,
                "start": 23,
              },
              "name": {
                "kind": "Name",
                "loc": {
                  "end": 29,
                  "start": 23,
                },
                "value": "String",
              },
            },
          },
        },
      ],
      "interfaces": [],
      "kind": "ObjectTypeDefinition",
      "loc": {
        "end": 33,
        "start": 0,
      },
      "name": {
        "kind": "Name",
        "loc": {
          "end": 10,
          "start": 5,
        },
        "value": "Query",
      },
    },
    {
      "description": undefined,
      "directives": [],
      "fields": [
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 25,
            "start": 18,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 20,
              "start": 18,
            },
            "value": "id",
          },
          "type": {
            "kind": "NonNullType",
            "loc": {
              "end": 25,
              "start": 22,
            },
            "type": {
              "kind": "NamedType",
              "loc": {
                "end": 24,
                "start": 22,
              },
              "name": {
                "kind": "Name",
                "loc": {
                  "end": 24,
                  "start": 22,
                },
                "value": "ID",
              },
            },
          },
        },
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 42,
            "start": 29,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 33,
              "start": 29,
            },
            "value": "name",
          },
          "type": {
            "kind": "NonNullType",
            "loc": {
              "end": 42,
              "start": 35,
            },
            "type": {
              "kind": "NamedType",
              "loc": {
                "end": 41,
                "start": 35,
              },
              "name": {
                "kind": "Name",
                "loc": {
                  "end": 41,
                  "start": 35,
                },
                "value": "String",
              },
            },
          },
        },
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 59,
            "start": 46,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 51,
              "start": 46,
            },
            "value": "price",
          },
          "type": {
            "kind": "NonNullType",
            "loc": {
              "end": 59,
              "start": 53,
            },
            "type": {
              "kind": "NamedType",
              "loc": {
                "end": 58,
                "start": 53,
              },
              "name": {
                "kind": "Name",
                "loc": {
                  "end": 58,
                  "start": 53,
                },
                "value": "Float",
              },
            },
          },
        },
      ],
      "interfaces": [],
      "kind": "ObjectTypeDefinition",
      "loc": {
        "end": 62,
        "start": 0,
      },
      "name": {
        "kind": "Name",
        "loc": {
          "end": 12,
          "start": 5,
        },
        "value": "Product",
      },
    },
    {
      "description": undefined,
      "directives": [],
      "fields": [
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 23,
            "start": 15,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 17,
              "start": 15,
            },
            "value": "id",
          },
          "type": {
            "kind": "NonNullType",
            "loc": {
              "end": 23,
              "start": 19,
            },
            "type": {
              "kind": "NamedType",
              "loc": {
                "end": 22,
                "start": 19,
              },
              "name": {
                "kind": "Name",
                "loc": {
                  "end": 22,
                  "start": 19,
                },
                "value": "Int",
              },
            },
          },
        },
        {
          "arguments": [],
          "description": undefined,
          "directives": [],
          "kind": "FieldDefinition",
          "loc": {
            "end": 39,
            "start": 27,
          },
          "name": {
            "kind": "Name",
            "loc": {
              "end": 31,
              "start": 27,
            },
            "value": "name",
          },
          "type": {
            "kind": "NamedType",
            "loc": {
              "end": 39,
              "start": 33,
            },
            "name": {
              "kind": "Name",
              "loc": {
                "end": 39,
                "start": 33,
              },
              "value": "String",
            },
          },
        },
      ],
      "interfaces": [],
      "kind": "ObjectTypeDefinition",
      "loc": {
        "end": 42,
        "start": 0,
      },
      "name": {
        "kind": "Name",
        "loc": {
          "end": 9,
          "start": 5,
        },
        "value": "User",
      },
    },
    {
      "kind": "SchemaDefinition",
      "operationTypes": [
        {
          "kind": "OperationTypeDefinition",
          "operation": "query",
          "type": {
            "kind": "NamedType",
            "name": {
              "kind": "Name",
              "loc": {
                "end": 10,
                "start": 5,
              },
              "value": "Query",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
}
`;
